@@ -19,6 +19,7 @@ import javax.annotation.Nullable;
 
 import org.apache.aurora.gen.AddInstancesConfig;
 import org.apache.aurora.gen.AuroraAdmin;
+import org.apache.aurora.gen.InstanceKey;
 import org.apache.aurora.gen.JobConfiguration;
 import org.apache.aurora.gen.JobKey;
 import org.apache.aurora.gen.JobUpdateKey;
@@ -78,7 +79,9 @@ public interface AnnotatedAuroraAdmin extends AuroraAdmin.Iface {
   @Override
   Response addInstances(
       @AuthorizingParam @Nullable AddInstancesConfig config,
-      @Nullable Lock lock) throws TException;
+      @Nullable Lock lock,
+      @AuthorizingParam @Nullable InstanceKey key,
+      int count) throws TException;
 
   @Override
   Response acquireLock(
